# jazz

./: .gitignore  Cargo.toml  README.md
assets/maps/: main.ldtk
src/: loading.rs  main.rs
src/level/: camera.rs  mod.rs
src/physics/: collision.rs  mod.rs
src/player/: mod.rs  movement.rs
